--- a/index.htm
+++ b/index.htm
@@ -123,22 +123,32 @@
   <h1>Watch my Videos</h1>
   <div class="video-items">
     <div class="video-item">
-      <a href="https://www.youtube.com/watch?v=FVR_94H4KVs" target="_blank">
-      <img src="img/cove.png">
-      <div class="card-bottom">
-      <img src="img/bagel.png">  
-      <p>Cades Cove April 2021</p>
-      </div>
-    </a>
-  </div>
-  <div class="video-item">
-    <a href="https://www.youtube.com/watch?v=EL36sBUCmvs" target="_blank">
-    <img src="img/cove.png"> 
-    <div class="card-bottom">
-    <img src="img/bagel.png">
-    <p>Clingman's Dome April 2021</p>
-    </div> 
-    </a>  
+      <a href="https://www.youtube.com/watch?v=ZBmDTpxOAiE&t=367s" target="_blank">
+        <img src="img/west coast.jpg" alt="West Coast cover img">
+        <div class="card-bottom">
+          <img src="img/bagel.png">  
+          <p>West Coast Trip 2020</p>
+        </div>
+      </a>
+    </div>
+    <div class="video-item">
+      <a href="https://www.youtube.com/watch?v=QnxrQ9XxnWc&t=18s" target="_blank">
+        <img src="img/smokies-cover.jpg" alt="Smokies cover img"> 
+        <div class="card-bottom">
+          <img src="img/bagel.png">
+          <p>Smokies Easter 2021</p>
+        </div> 
+      </a>  
+    </div>
+    <div class="video-item">
+      <a href="https://www.youtube.com/watch?v=X7OPOvPU81Q&t=152s" target="_blank">
+        <img src="img/cumberland gap.png" alt="Cumberland Gap cover img"> 
+        <div class="card-bottom">
+          <img src="img/bagel.png">
+          <p>Cumberland Mountain 2021</p>
+        </div> 
+      </a>  
+    </div>
   </div>
 </section>
 
