--- a/index.htm
+++ b/index.htm
@@ -1,178 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<!-- bootstrap css -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-<!-- main css -->
-  <link rel="stylesheet" href="css/style.css">
-<!-- font awesome -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  <title>Traveling Bagel Blue</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- bootstrap css -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- main css -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <title>Traveling Bagel Blue</title>
+  </head>
 
-<body>
+  <body>
 
-<header id="header">
-  <nav class="navbar navbar-expand-lg px-4">
-    <img src="img/bagel blue.png" class="desktop-icon" alt="main icon">
-  </a>
-    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#myNavbar">
-      <span class="toggler-icon">
-        <i class="fas fa-bars"></i>
-      </span>
-     </button>
-     <div class="collapse navbar-collapse" id="myNavbar">
-       <ul class="navbar-nav text-capitalize ml-auto">
-         <li class="nav-item active">
-           <a href="index.htm" class="nav-link">home</a>
-         </li>
-         <li class="nav-item active">
-           <a href="about.htm" class="nav-link">about</a>
-         </li>
-         <li class="nav-item active">
-           <a href="blog.htm" class="nav-link">blogs</a>
-         </li>
-         <li class="nav-item active">
-           <a href="contact.htm" class="nav-link">contacts</a>
-         </li>
-         <li class="nav-item active">
-           <a href="#footer" class="nav-link">links</a>
-         </li>
-       </ul>
-</nav>
-<!-- end of nav -->
-<!-- banner -->
-<div class="container-fluid">
-  <div class="row max-height justify-content-center align-items-center">
-    <div class="col-10 mx-auto banner text-center">
-      <h1 class="text-capitalize">
-      <strong class="banner-title">Explore a whole new world through travel</strong>
-      </h1>
-</div>
-  </div>
-    </div>
-<!-- end of banner -->
-</header>
-<!-- end of header-->
-
-<!-- Icons Section -->
-<section class="icons">
-  <div class="explore-icon">
-     <i class="far fa-smile fa-3x"></i>
-     <h3>enjoy</h3>
-  </div>
-  <div class="destination-icon">
-    <i class="fas fa-camera fa-3x"></i>
-    <h3>capture</h3>
-  </div>
-  <div class="stories-icon">
-    <i class="fab fa-wpexplorer fa-3x"></i>
-    <h3>explore</h3>
-  </div>
-</section>
-<!-- Explore Photos -->
-<section id="explore">
-  <div class="photo-item">
-    <img src="img/mountains.jpg">
-    <h5>beauty of the mountains</h5>
-    <button class="btn">more</button>
-  </div>
-  <div class="photo-item">
-    <img src="img/beach-2.jpg">
-    <h5>sounds of the beach</h5>
-    <button class="btn">more</button>
-  </div>
-  <div class="photo-item">
-    <img src="img/city.jpg">
-    <h5>sights of the city</h5>
-    <button class="btn">more</button>
-  </div>
-</section>
-<div class="border-bottom"></div>
-
-<!-- Destination and Tips -->
-<section class="map">
-  <div class="tips">
-    <img src="img/travel3.png">
-    <div class="tip">
-      <p>browse, carefully choose, and book where you want to stay as soon as you know your destination.</p>
-      <p>look for hotel or lodging companies with discount plans, free parking, free Wi-Fi, and great reviews.</p>
-      <p>book flights and cruises as soon as you know your destination. </p>
-      <p>plan out a daily routine for your trip a few days or more before your trip.</p>
-      <p>browse restaurants and what events are going on around your destination and plan before your trip.</p>
-      <p>pack extra clothes, a first aid kit, and needed supplys for your vehicle in case of an emergency. </p>
-      <p>have extra cash on hand in case of miscellaneous expenses and gratuities.</p>
-      <p>notify your bank and credit card companies that you will be traveling if necessary.</p>
-      <p>have your passport and visa if applicable if you are traveling internationally.</p>
-      <p>explore and learn ahead of time about the area you are traveling to including the sites, history, and the language.</p>
-    </div>
-  </div>
-  <div class="destination">
-    <h1>plan your destination route</h1>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7458391.147156375!2d-90.25250774999041!3d38.33891245626472!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54eab584e432360b%3A0x1c3bb99243deb742!2sUnited%20States!5e0!3m2!1sen!2sus!4v1624804931012!5m2!1sen!2sus" width="550" height="400" allowfullscreen="" loading="lazy"></iframe>
-  </div>
-</section>
-
-<!-- YouTube Section -->
-<section class="video">
-  <img src="img/youtube.png">
-  <h1>Watch my Videos</h1>
-  <div class="video-items">
-    <div class="video-item">
-      <a href="https://www.youtube.com/watch?v=ZBmDTpxOAiE&t=367s" target="_blank">
-        <img src="img/west coast.jpg" alt="West Coast cover img">
-        <div class="card-bottom">
-          <img src="img/bagel.png">  
-          <p>West Coast Trip 2020</p>
+    <nav class="navbar navbar-expand-lg bg-light navbar-light">
+      <div class="container">
+        <img src="img/bagel blue.png" class="desktop-icon" alt="Bagel Blue Logo"></a>
+        <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu"> 
+          <span class="toggler-icon top-bar"></span>
+          <span class="toggler-icon middle-bar"></span>
+          <span class="toggler-icon bottom-bar"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navmenu">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item"> 
+              <a href="about.html" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="blog.html" class="nav-link">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a href="contact.html" class="nav-link">Contact</a>
+            </li>
+          </ul>
         </div>
-      </a>
+      </div>
+    </nav>
+    <!-- end of nav -->
+    <!-- Header -->
+    <div class="container-fluid">
+      <div class="row max-height justify-content-center align-items-center">
+        <div class="col-10 mx-auto banner text-center">
+          <h1 class="text-capitalize">
+            <strong class="banner-title">Explore a whole new world through travel</strong>
+          </h1>
+        </div>
+      </div>
     </div>
-    <div class="video-item">
-      <a href="https://www.youtube.com/watch?v=QnxrQ9XxnWc&t=18s" target="_blank">
-        <img src="img/smokies-cover.jpg" alt="Smokies cover img"> 
-        <div class="card-bottom">
-          <img src="img/bagel.png">
-          <p>Smokies Easter 2021</p>
-        </div> 
-      </a>  
-    </div>
-    <div class="video-item">
-      <a href="https://www.youtube.com/watch?v=X7OPOvPU81Q&t=152s" target="_blank">
-        <img src="img/cumberland gap.png" alt="Cumberland Gap cover img"> 
-        <div class="card-bottom">
-          <img src="img/bagel.png">
-          <p>Cumberland Mountain 2021</p>
-        </div> 
-      </a>  
-    </div>
-  </div>
-</section>
 
-<!-- Banner Photo -->
-<section class="banner-photo">
-</section>
+    <!-- Icons Section -->
+    <section class="icons">
+      <div class="explore-icon">
+        <i class="far fa-smile fa-3x"></i>
+        <h3>enjoy</h3>
+      </div>
+      <div class="destination-icon">
+        <i class="fas fa-camera fa-3x"></i>
+        <h3>capture</h3>
+      </div>
+      <div class="stories-icon">
+        <i class="fab fa-wpexplorer fa-3x"></i>
+        <h3>explore</h3>
+      </div>
+    </section>
 
-<!-- footer -->
-<footer class="footer p-2">
-  <p>Check us out on YouTube</p>
-  <div class="footer-icons d-flex justify-content-around">
-    <a href="" class="footer-icon">
-      <i class="fab fa-youtube"></i>
-    </a>
-  </div>
-     <p>&copy; 2021 Traveling Bagel Blue. All rights reserved.</p>
-</footer>
-<!-- jquery -->
-<script src="js/jquery-3.3.1.min.js"></script>
-<!-- bootstrap js -->
-<script src="js/bootstrap.bundle.min.js"></script>
-<!-- script js -->
-<script src="js/app.js"></script>
-<script src="js/script.js"></script>
+    <!-- Explore Photos -->
+    <section id="explore">
+      <div class="photo-item">
+        <img src="img/mountains.jpg">
+        <h5>beauty of the mountains</h5>
+        <button class="btn">more</button>
+      </div>
+      <div class="photo-item">
+        <img src="img/beach-2.jpg">
+        <h5>sounds of the beach</h5>
+        <button class="btn">more</button>
+      </div>
+      <div class="photo-item">
+        <img src="img/city.jpg">
+        <h5>sights of the city</h5>
+        <button class="btn">more</button>
+      </div>
+    </section>
+    <div class="border-bottom"></div>
+
+    <!-- Destination and Tips -->
+    <section class="map">
+      <div class="tips">
+        <img src="img/travel3.png">
+        <div class="tip">
+          <p>browse, carefully choose, and book where you want to stay as soon as you know your destination.</p>
+          <p>look for hotel or lodging companies with discount plans, free parking, free Wi-Fi, and great reviews.</p>
+          <p>book flights and cruises as soon as you know your destination. </p>
+          <p>plan out a daily routine for your trip a few days or more before your trip.</p>
+          <p>browse restaurants and what events are going on around your destination and plan before your trip.</p>
+          <p>pack extra clothes, a first aid kit, and needed supplys for your vehicle in case of an emergency. </p>
+          <p>have extra cash on hand in case of miscellaneous expenses and gratuities.</p>
+          <p>notify your bank and credit card companies that you will be traveling if necessary.</p>
+          <p>have your passport and visa if applicable if you are traveling internationally.</p>
+          <p>explore and learn ahead of time about the area you are traveling to including the sites, history, and the language.</p>
+        </div>
+      </div>
+      <div class="destination">
+        <h1>plan your destination route</h1>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7458391.147156375!2d-90.25250774999041!3d38.33891245626472!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54eab584e432360b%3A0x1c3bb99243deb742!2sUnited%20States!5e0!3m2!1sen!2sus!4v1624804931012!5m2!1sen!2sus" width="550" height="400" allowfullscreen="" loading="lazy"></iframe>
+      </div>
+    </section>
+
+    <!-- YouTube Section -->
+    <section class="video">
+      <img src="img/youtube.png">
+      <h1>Watch my Videos</h1>
+      <div class="video-items">
+        <div class="video-item">
+          <a href="https://www.youtube.com/watch?v=ZBmDTpxOAiE&t=367s" target="_blank">
+            <img src="img/west coast.jpg" alt="West Coast cover img">
+            <div class="card-bottom">
+              <img src="img/bagel.png">  
+              <p>West Coast Trip 2020</p>
+            </div>
+          </a>
+        </div>
+        <div class="video-item">
+          <a href="https://www.youtube.com/watch?v=QnxrQ9XxnWc&t=18s" target="_blank">
+            <img src="img/smokies-cover.jpg" alt="Smokies cover img"> 
+            <div class="card-bottom">
+              <img src="img/bagel.png">
+              <p>Smokies Easter 2021</p>
+            </div> 
+          </a>  
+        </div>
+        <div class="video-item">
+          <a href="https://www.youtube.com/watch?v=X7OPOvPU81Q&t=152s" target="_blank">
+            <img src="img/cumberland gap.png" alt="Cumberland Gap cover img"> 
+            <div class="card-bottom">
+              <img src="img/bagel.png">
+              <p>Cumberland Mountain 2021</p>
+            </div> 
+          </a>  
+        </div>
+      </div>
+    </section>
+
+    <!-- Banner Photo -->
+    <section class="banner-photo"></section>
+
+    <!-- footer -->
+    <footer class="footer p-2">
+      <p>Check us out on YouTube</p>
+      <div class="footer-icons d-flex justify-content-around">
+        <a href="" class="footer-icon">
+          <i class="fab fa-youtube"></i>
+        </a>
+      </div>
+      <p>&copy; 2021 Traveling Bagel Blue. All rights reserved.</p>
+    </footer>
+
+    <!-- jquery -->
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <!-- bootstrap js -->
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <!-- script js -->
+    <script src="js/app.js"></script>
+    <script src="js/script.js"></script>
 
   </body>
 </html>  
