--- a/blog.htm
+++ b/blog.htm
@@ -1,121 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<!-- bootstrap css -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-<!-- main css -->
-  <link rel="stylesheet" href="css/style.css">
-<!-- font awesome -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  <title>Traveling Bagel Blue</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- bootstrap css -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- main css -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <title>Traveling Bagel Blue</title>
+  </head>
 
-<body>
+  <body>
 
-<header id="header">
-  <nav class="navbar navbar-expand-lg px-4">
-    <img src="img/bagel blue.png" class="desktop-icon" alt="main icon">
-  </a>
-    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#myNavbar">
-      <span class="toggler-icon">
-        <i class="fas fa-bars"></i>
-      </span>
-     </button>
-     <div class="collapse navbar-collapse" id="myNavbar">
-       <ul class="navbar-nav text-capitalize ml-auto">
-         <li class="nav-item active">
-           <a href="index.htm" class="nav-link">home</a>
-         </li>
-         <li class="nav-item active">
-           <a href="about.htm" class="nav-link">about</a>
-         </li>
-         <li class="nav-item active">
-           <a href="blog.htm" class="nav-link">blogs</a>
-         </li>
-         <li class="nav-item active">
-           <a href="contact.htm" class="nav-link">contacts</a>
-         </li>
-         <li class="nav-item active">
-           <a href="#" class="nav-link">links</a>
-         </li>
-       </ul>
-</nav>
-<!-- end of nav -->
+    <nav class="navbar navbar-expand-lg bg-light navbar-light">
+      <div class="container">
+        <img src="img/bagel blue.png" class="desktop-icon" alt="Bagel Blue Logo"></a>
+        <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu"> 
+          <span class="toggler-icon top-bar"></span>
+          <span class="toggler-icon middle-bar"></span>
+          <span class="toggler-icon bottom-bar"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navmenu">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item"> 
+              <a href="about.html" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="blog.html" class="nav-link">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a href="contact.html" class="nav-link">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-<!-- Blog section -->
-<section id="blog" class="blog py-5">
-  <div class="container">
-<!-- section title -->
-<div class="row">
-  <div class="col-10 mx-auto col-sm-6 text-center">
-    <h1 class="text-capitalize">  <strong
-    class="banner-title">Blogs</strong></h1>
-     </div>
-   </div>
-<!-- end section title -->
+    <!-- Blog section -->
+    <section id="blog" class="blog py-5">
+      <div class="container">
+        <!-- section title -->
+        <div class="row">
+          <div class="col-10 mx-auto col-sm-6 text-center">
+            <h1 class="text-capitalize">  <strong class="banner-title">Blogs</strong></h1>
+          </div>
+        </div>
+        <div class="header">
+          <h2></h2>
+        </div>
+        <div class="row">
+          <div class="leftcolumn">
+            <div class="card">
+              <h2>Title Heading</h2>
+              <h5>Title Description, May 17, 2021</h5>
+              <img src="img/smokeys.jpg"> 
+            </div>
+            <p>Nice Day..</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam fugit cum, exercitationem ratione quasi porro qui praesentium repellat laborum consequatur itaque perspiciatis voluptatibus minus veritatis neque necessitatibus, ipsum quos delectus!</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
-<div class="header">
-  <h2></h2>
-</div>
+    <div id="disqus_thread"></div>
+    <script>
+      /**
+      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+      /*
+      var disqus_config = function () {
+      this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+      this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+      };
+      */
+      (function() { // DON'T EDIT BELOW THIS LINE
+      var d = document, s = d.createElement('script');
+      s.src = 'https://traveling-bagel-blue.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+      })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
-<div class="row">
-  <div class="leftcolumn">
-    <div class="card">
-        <h2>Title Heading</h2>
-        <h5>Title Description, May 17, 2021</h5>
-        <img src="img/smokeys.jpg"> 
-    </div>
-      <p>Nice Day..</p>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam fugit cum, exercitationem ratione quasi porro qui praesentium repellat laborum consequatur itaque perspiciatis voluptatibus minus veritatis neque necessitatibus, ipsum quos delectus!</p>
+    <!-- footer -->
+    <footer class="footer p-2">
+      <p>Check us out on YouTube</p>
+      <div class="footer-icons d-flex justify-content-around">
+        <a href="" class="footer-icon">
+          <i class="fab fa-youtube"></i>
+        </a>
+      </div>
+      <p>&copy; 2021 Traveling Bagel Blue. All rights reserved.</p>
+    </footer>
 
-    </div>
-  </div>
-</section>
+    <!-- jquery -->
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <!-- bootstrap js -->
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <!-- Disqus js-->
+    <script id="dsq-count-scr" src="//traveling-bagel-blue.disqus.com/count.js" async></script>
+    <!-- script js -->
+    <script src="js/app.js"></script>
 
-<div id="disqus_thread"></div>
-<script>
-    /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-    /*
-    var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
-    */
-    (function() { // DON'T EDIT BELOW THIS LINE
-    var d = document, s = d.createElement('script');
-    s.src = 'https://traveling-bagel-blue.disqus.com/embed.js';
-    s.setAttribute('data-timestamp', +new Date());
-    (d.head || d.body).appendChild(s);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
- 
-<!-- end of blog section -->
-
-<!-- footer -->
-<footer class="footer p-2">
-  <p>Check us out on YouTube</p>
-  <div class="footer-icons d-flex justify-content-around">
-    <a href="" class="footer-icon">
-      <i class="fab fa-youtube"></i>
-    </a>
-  </div>
-     <p>&copy; 2021 Traveling Bagel Blue. All rights reserved.</p>
-</footer>
-<!-- jquery -->
-<script src="js/jquery-3.3.1.min.js"></script>
-<!-- bootstrap js -->
-<script src="js/bootstrap.bundle.min.js"></script>
-<!-- Disqus js-->
-<script id="dsq-count-scr" src="//traveling-bagel-blue.disqus.com/count.js" async></script>
-<!-- script js -->
-<script src="js/app.js"></script>
-
-</body>
+  </body>
 </html>
