--- a/contact.htm
+++ b/contact.htm
@@ -1,69 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<!-- bootstrap css -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-<!-- main css -->
-  <link rel="stylesheet" href="css/style.css">
-<!-- font awesome -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  <title>Traveling Bagel Blue</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- bootstrap css -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- main css -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <title>Traveling Bagel Blue</title>
+  </head>
 
-<body>
+  <body>
 
-<header id="header">
-  <nav class="navbar navbar-expand-lg px-4">
-    <img src="img/bagel blue.png" class="desktop-icon" alt="main icon">
-  </a>
-    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#myNavbar">
-      <span class="toggler-icon">
-        <i class="fas fa-bars"></i>
-      </span>
-     </button>
-     <div class="collapse navbar-collapse" id="myNavbar">
-       <ul class="navbar-nav text-capitalize ml-auto">
-         <li class="nav-item active">
-           <a href="index.htm" class="nav-link">home</a>
-         </li>
-         <li class="nav-item active">
-           <a href="about.htm" class="nav-link">about</a>
-         </li>
-         <li class="nav-item active">
-           <a href="blog.htm" class="nav-link">blogs</a>
-         </li>
-         <li class="nav-item active">
-           <a href="contact.htm" class="nav-link">contacts</a>
-         </li>
-         <li class="nav-item active">
-           <a href="#" class="nav-link">links</a>
-         </li>
-       </ul>
-</nav>
-<!-- end of nav -->
+    <nav class="navbar navbar-expand-lg bg-light navbar-light">
+      <div class="container">
+        <img src="img/bagel blue.png" class="desktop-icon" alt="Bagel Blue Logo"></a>
+        <button class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu"> 
+          <span class="toggler-icon top-bar"></span>
+          <span class="toggler-icon middle-bar"></span>
+          <span class="toggler-icon bottom-bar"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navmenu">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item"> 
+              <a href="about.html" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="blog.html" class="nav-link">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a href="contact.html" class="nav-link">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-<div class="contact-background py-5">
-
-<div class="container contact-form">
-    <h1>Contact Us</h1>
-    <hr>
-    <div class="row">
-
-        <div class="col-md-6">
+    <div class="contact-background py-5">
+      <div class="container contact-form">
+        <h1>Contact Us</h1>
+        <hr>
+        <div class="row">
+          <div class="col-md-6">
             <address>555 West Lane Redmond WA</address>
             <p>Email: test@email.com</p>
             <p>Phone: (555)555-5555</p>
-
-        </div>
-
-        <div class="col-md-6">
+          </div>
+          <div class="col-md-6">
             <div class="form-group">
-                <label>Name</label>
-                <input type="text" class="form-control">
+              <label>Name</label>
+              <input type="text" class="form-control">
             </div>
             <div class="form-group">
                 <label>Email</label>
@@ -76,28 +69,29 @@
             <div class="form-group">
                 <button class="btn btn-dark btn-block">send</button>
             </div>
+          </div>
         </div>
+      </div>
     </div>
-</div>
-</div>
 
-<!-- footer -->
-<footer class="footer p-2">
-    <p>Check us out on YouTube</p>
-    <div class="footer-icons d-flex justify-content-around">
-      <a href="" class="footer-icon">
-        <i class="fab fa-youtube"></i>
-      </a>
-    </div>
-       <p>&copy; 2021 Traveling Bagel Blue. All rights reserved.</p>
-  </footer>
-  <!-- jquery -->
-  <script src="js/jquery-3.3.1.min.js"></script>
-  <!-- bootstrap js -->
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <!-- script js -->
-  <script src="js/app.js"></script>
+    <!-- footer -->
+    <footer class="footer p-2">
+      <p>Check us out on YouTube</p>
+      <div class="footer-icons d-flex justify-content-around">
+        <a href="" class="footer-icon">
+          <i class="fab fa-youtube"></i>
+        </a>
+      </div>
+      <p>&copy; 2021 Traveling Bagel Blue. All rights reserved.</p>
+    </footer>
+    
+    <!-- jquery -->
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <!-- bootstrap js -->
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <!-- script js -->
+    <script src="js/app.js"></script>
   
   
-   </body>
-  </html>
+  </body>
+</html>
