--- a/about.htm
+++ b/about.htm
@@ -49,9 +49,12 @@
           <div class="col-10 mx-auto col-md-6 my-5">
             <h1 class="text-capitalize">about</h1>
             <p class="my-4 text-muted w-75">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate beatae
-              est hic iusto cupiditate modi!
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa, facere.
+              Traveling Bagel Blue is all about having fun and making memories that last a lifetime through travel. We
+              are commited to visiting and exploring different places we have never been and helping others that are 
+              struggling to decide on that next destination that is perfect for them. Whether it is a family vacation 
+              or a place where someone just wants to go and get away, we are here to help. Join us as we share our 
+              experiences and adventures through travel and maybe it will be the guide that helps get you on the road to
+              that destination or vacation retreat filled with fond memories that will last a lifetime.
             </p>
           </div>
           <div class="col-10 mx-auto col-md-6 my-5 align-self-center">
