--- a/about.htm
+++ b/about.htm
@@ -46,9 +46,9 @@
     <section class="about py-5" id="about">
       <div class="container">
         <div class="row">
-          <div class="col-10 mx-auto col-md-6 my-5">
+          <div class="col-10 col-lg-5 col-md-7 mx-auto col-md-6 my-5">
             <h1 class="text-capitalize">about</h1>
-            <p class="my-4 text-muted w-75">
+            <p class="align-self-center fs-6 my-4 text-dark">
               Traveling Bagel Blue is all about having fun and making the most out of our experiences and opportunities
               through travel. We are commited to visiting and exploring different places we have never been and helping 
               others that are struggling to decide on that next destination that is perfect for them. Whether it is a
