--- a/contact.htm
+++ b/contact.htm
@@ -42,35 +42,31 @@
         </div>
       </div>
     </nav>
-
-    <div class="contact-background py-5">
-      <div class="container contact-form">
-        <h1>Contact Us</h1>
-        <hr>
-        <div class="row">
-          <div class="col-md-6">
-            <address>555 West Lane Redmond WA</address>
-            <p>Email: test@email.com</p>
-            <p>Phone: (555)555-5555</p>
-          </div>
-          <div class="col-md-6">
-            <div class="form-group">
-              <label>Name</label>
-              <input type="text" class="form-control">
-            </div>
-            <div class="form-group">
-                <label>Email</label>
-                <input type="text" class="form-control">
-            </div>
-            <div class="form-group">
-                <label>Message</label>
-                <textarea class="form-control" rows="7"></textarea>
-            </div>
-            <div class="form-group">
-                <button class="btn btn-dark btn-block">send</button>
-            </div>
-          </div>
+  
+    <div class="flex-column">
+      <div class="contact-form p-3">
+          <p class=" fs-1 text-white text-center">Questions or Comments?</p>
+          <p class="fs-5 text-white text-center">Leave a message and we will get back with you shortly.</p>
+      </div>
+      <div class="col-md-6 bg-white p-5 mx-auto">
+        <div class="form-group">
+          <label>Name</label>
+            <input type="text" class="form-control border border-secondary">
         </div>
+        <div class="form-group">
+            <label>Email</label>
+            <input type="text" class="form-control border border-secondary">
+        </div>
+        <div class="form-group">
+          <label>Message</label>
+          <textarea class="form-control border border-secondary" rows="7"></textarea>
+        </div>
+        <div class="form-group">
+          <button class="btn btn-dark btn-block mt-3">send</button>
+        </div>
+      </div>
+      <div class="contact-form p-5">
+        <img src="img/bagel blue-white.png" class="mx-auto d-block img-fluid">
       </div>
     </div>
 
