--- a/blog.htm
+++ b/blog.htm
@@ -44,51 +44,63 @@
     </nav>
 
     <!-- Blog section -->
-    <section id="blog" class="blog py-5">
-      <div class="container">
-        <!-- section title -->
-        <div class="row">
-          <div class="col-10 mx-auto col-sm-6 text-center">
-            <h1 class="text-capitalize">  <strong class="banner-title">Blogs</strong></h1>
+    <section id="blog">
+      <div class="blog-heading">
+        <span>My Recent Posts</span>
+        <h3>My Blog</h3>
+      </div>
+      <div class="blog-container">
+        <div class="blog-box">
+          <div class="blog-img">
+            <img src="img/beach-3.jpg" alt="beach">
+          </div>
+          <div class="blog-text">
+            <span>28 November 2019 / Beach Relaxation</span>
+            <a href="#" class="blog-title">Nice Beach Day</a>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam doloremque, obcaecati ex rerum odit 
+              totam vel corrupti sed voluptatum corporis nostrum qui autem velit ducimus cumque voluptatibus eveniet
+              harum architecto hic sequi asperiores omnis itaque? Est tempore atque, ut molestiae optio sapiente
+              maiores. Error porro animi, tempore aperiam obcaecati necessitatibus.
+            </p>
+            <a href="#">Read More</a>
           </div>
         </div>
-        <div class="header">
-          <h2></h2>
+        <div class="blog-box">
+          <div class="blog-img">
+            <img src="img/city-2.jpg" alt="city">
+          </div>
+          <div class="blog-text">
+            <span>30 October 2021 / City Life</span>
+            <a href="#" class="blog-title">Exploring the City</a>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam doloremque, obcaecati ex rerum odit 
+              totam vel corrupti sed voluptatum corporis nostrum qui autem velit ducimus cumque voluptatibus eveniet
+              harum architecto hic sequi asperiores omnis itaque? Est tempore atque, ut molestiae optio sapiente
+              maiores. Error porro animi, tempore aperiam obcaecati necessitatibus.
+            </p>
+            <a href="#">Read More</a>
+          </div>
         </div>
-        <div class="row">
-          <div class="leftcolumn">
-            <div class="card">
-              <h2>Title Heading</h2>
-              <h5>Title Description, May 17, 2021</h5>
-              <img src="img/smokeys.jpg"> 
-            </div>
-            <p>Nice Day..</p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam fugit cum, exercitationem ratione quasi porro qui praesentium repellat laborum consequatur itaque perspiciatis voluptatibus minus veritatis neque necessitatibus, ipsum quos delectus!</p>
+        <div class="blog-box">
+          <div class="blog-img">
+            <img src="img/mountains-2.jpg" alt="mountains">
+          </div>
+          <div class="blog-text">
+            <span>16 April 2023 / Mountain Beauty</span>
+            <a href="#" class="blog-title">Visiting the Mountains</a>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam doloremque, obcaecati ex rerum odit 
+              totam vel corrupti sed voluptatum corporis nostrum qui autem velit ducimus cumque voluptatibus eveniet
+              harum architecto hic sequi asperiores omnis itaque? Est tempore atque, ut molestiae optio sapiente
+              maiores. Error porro animi, tempore aperiam obcaecati necessitatibus.
+            </p>
+            <a href="#">Read More</a>
           </div>
         </div>
       </div>
     </section>
-
-    <div id="disqus_thread"></div>
-    <script>
-      /**
-      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-      /*
-      var disqus_config = function () {
-      this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-      this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-      };
-      */
-      (function() { // DON'T EDIT BELOW THIS LINE
-      var d = document, s = d.createElement('script');
-      s.src = 'https://traveling-bagel-blue.disqus.com/embed.js';
-      s.setAttribute('data-timestamp', +new Date());
-      (d.head || d.body).appendChild(s);
-      })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-
+  
     <!-- footer -->
     <footer class="footer p-2">
       <p>Check us out on YouTube</p>
